# tripadvisor-data-pipeline

./: .gitignore  README.md  airflow.cfg  airflow.db  config.toml  docker-compose.yml  pyproject.toml  standalone_admin_password.txt
dags/: tripadvisor_dag.py
machine_learning/: modelo_ml.py  modelos_ml2.py
notebooks/: 1_eda_tripadvisor.ipynb
sdpd2_tripadvisor_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spark_streaming/: consumidor_tripadvisor.py
utils/: transformaciones.py
